<resources>
    <string name="app_name">Financing</string>

    <string name="title_index">首页</string>
    <string name="title_product">产品</string>
    <string name="title_activity">服务</string>
    <string name="title_personal">我</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="btn_confirm">确认</string>

    <string name="title_forget">找回登录密码</string>
    <string name="forget_des">通过您的注册手机号找回密码</string>
    <string name="button_next">下一步</string>
    <string name="forget_edit_text">请填写手机号码</string>
    <string name="forget_edit_valid">请填输入验证码</string>
    <string name="forget_get_valid">获取验证码</string>

    <string name="reset_des">设置新登录密码</string>
    <string name="reset_passwd">请输入6-16位数字或英文</string>
    <string name="reset_passwd_again">再次输入新密码</string>

    <string name="register_phone">手机号</string>
    <string name="register_passwd">新密码</string>
    <string name="register_valid">验证码</string>

    <string name="server_touxiang">设置/修改昵称</string>
    <string name="server_tools">收益计算器</string>
    <string name="server_help">帮助中心</string>
    <string name="server_kefu">客服服务</string>
    <string name="server_aboutme">关于我们</string>


    <string name="me_interest">我的收益</string>
    <string name="me_investment">我的投资</string>
    <string name="me_withdraw">提现记录</string>
    <string name="me_bonus">我的红包</string>
    <string name="me_setting">设置</string>

    <string name="login_username">手机号</string>
    <string name="login_password">密码</string>
    <string name="forget_password">忘记密码?</string>


    <string name="index_warn_text">*预期收益非平台承诺收益,市场有风险,投资需谨慎</string>
    <string name="pay_buy" >立即出借</string>
</resources>
