<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGrey"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/bgWhile"
        >
        <RelativeLayout
            android:id="@+id/reset_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_btn"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_forget"
            android:textSize="@dimen/text_18"/>
    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_des"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/reset_passwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:padding="10dp"
            android:textSize="@dimen/text_16"
            android:background="@color/bgWhile"
            android:inputType="phone"
            android:hint="@string/reset_passwd"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGrey"/>
        <EditText
            android:id="@+id/reset_passwd_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:padding="10dp"
            android:textSize="@dimen/text_16"
            android:background="@color/bgWhile"
            android:inputType="phone"
            android:hint="@string/reset_passwd_again"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/reset_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:text="@string/btn_confirm"
        android:background="@color/blue"
        android:textSize="@dimen/text_18"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/textWhile"
        android:gravity="center"
        />

</LinearLayout>