<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bgGrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:textColor="@color/textWhile"
        android:textSize="@dimen/title_size"
        android:gravity="center"
        android:text="@string/title_activity"
        android:background="@color/textRed"
        />
    <com.github.financing.views.ReboundView.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/server_computer"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_tools"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/text_14"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/shouyigongju"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />remo
            <TextView
                android:id="@+id/server_help"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_help"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/text_14"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/bangzhuizhongxin"
                />
            <TextView
                android:id="@+id/server_kefu"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_kefu"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/text_14"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/faxian_kehufuwu"
                android:layout_marginTop="1dp"
                />
            <TextView
                android:id="@+id/server_about"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_aboutme"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/text_14"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/guanyuwomen"
                android:layout_marginTop="1dp"
                />
        </LinearLayout>
    </com.github.financing.views.ReboundView.ReboundScrollView>
</LinearLayout>