<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGrey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/bgWhile"
        >
        <RelativeLayout
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_btn"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textSize="@dimen/text_18"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgWhile"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/textBlack"
            android:padding="10dp"
            android:textSize="@dimen/text_13"
            android:text="@string/register_phone"/>
        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:padding="10dp"
            android:textSize="@dimen/text_13"
            android:background="@color/bgWhile"
            android:inputType="phone"
            android:hint="@string/forget_edit_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgWhile"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/textBlack"
            android:padding="10dp"
            android:textSize="@dimen/text_13"
            android:text="@string/register_passwd"/>
        <EditText
            android:id="@+id/register_passwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:padding="10dp"
            android:textSize="@dimen/text_13"
            android:background="@color/bgWhile"
            android:inputType="textPassword"
            android:hint="@string/register_passwd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/bgWhile"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register_valid"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/text_13"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/register_validCode"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            android:padding="10dp"
            android:textSize="@dimen/text_13"
            android:background="@color/bgWhile"
            android:hint="@string/forget_edit_valid"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bgGrey"
            />
        <TextView
            android:id="@+id/register_get_valid"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:text="@string/forget_get_valid"
            android:background="@drawable/btn_background"
            android:textSize="@dimen/text_13"
            android:textColor="@color/textRed"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:text="@string/title_register"
        android:background="@color/blue"
        android:textSize="@dimen/text_18"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/textWhile"
        android:gravity="center"
        />
</LinearLayout>