<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bgGrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:textColor="@color/textWhile"
        android:textSize="@dimen/title_size"
        android:gravity="center"
        android:text="@string/title_personal"
        android:background="@color/textRed"
        />

    <com.github.financing.views.ReboundView.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgGrey"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgWhile"
                >
                <TextView
                    android:id="@+id/me_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/menologin"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/me_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:text="@string/me_interest"
                android:textColor="@color/textBlack"
                android:layout_marginTop="1dp"
                android:drawableRight="@drawable/icon_right_an"
                android:drawableLeft="@drawable/zijin"
                android:drawablePadding="8dp"
                />
            <TextView
                android:id="@+id/me_investment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:text="@string/me_investment"
                android:textColor="@color/textBlack"
                android:layout_marginTop="1dp"
                android:drawableRight="@drawable/icon_right_an"
                android:drawableLeft="@drawable/touzi"
                android:drawablePadding="8dp"
                />
            <TextView
                android:id="@+id/me_withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:text="@string/me_withdraw"
                android:textColor="@color/textBlack"
                android:layout_marginTop="1dp"
                android:drawableRight="@drawable/icon_right_an"
                android:drawableLeft="@drawable/keepselfmy"
                android:drawablePadding="8dp"
                />
            <TextView
                android:id="@+id/me_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:text="@string/me_bonus"
                android:textColor="@color/textBlack"
                android:layout_marginTop="1dp"
                android:drawableRight="@drawable/icon_right_an"
                android:drawableLeft="@drawable/yinhangka"
                android:drawablePadding="8dp"
                />
            <TextView
                android:id="@+id/me_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgWhile"
                android:padding="14dp"
                android:text="@string/me_setting"
                android:textColor="@color/textBlack"
                android:layout_marginTop="8dp"
                android:drawableRight="@drawable/icon_right_an"
                android:drawableLeft="@drawable/shezhi"
                android:drawablePadding="8dp"
                />
        </LinearLayout>
    </com.github.financing.views.ReboundView.ReboundScrollView>
</LinearLayout>