<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGrey"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/bgWhile"
        >

        <TextView
            android:id="@+id/valid_back"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_btn"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_forget"
            android:textSize="@dimen/text_18"/>
    </RelativeLayout>


    <EditText
        android:id="@+id/forget_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_normal"
        android:hint="@string/forget_edit_text"
        />
    <TextView
        android:id="@+id/forget_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:text="@string/button_next"
        android:background="@color/blue"
        android:textSize="@dimen/text_18"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/textWhile"
        android:gravity="center"
        />
</LinearLayout>