<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGrey"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/bgWhile">
        <RelativeLayout
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_btn"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="@dimen/text_18"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/login_username"
            android:padding="@dimen/padding_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:hint="@string/login_username"
            android:background="@color/bgWhile"
            android:inputType="phone"
            android:textSize="@dimen/text_16"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGrey"/>
        <EditText
            android:id="@+id/login_password"
            android:padding="@dimen/padding_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:background="@color/bgWhile"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:textSize="@dimen/text_16"
            />

        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/login_forget"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_login"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:text="@string/title_login"
            android:textColor="@color/textBlue"
            android:background="@drawable/textview_border"
            android:textSize="@dimen/text_18"
            />
        <TextView
            android:id="@+id/login_register"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="8dp"
            android:text="@string/title_register"
            android:background="@color/textBlue"
            android:textSize="@dimen/text_18"
            android:textColor="@color/textWhile"
            />

    </LinearLayout>

</LinearLayout>